@@ -1,11 +1,12 @@
 Package: mirt
-Version: 1.5.7
+Version: 1.5.8
 Date: 2014-04-23
 Type: Package
 Title: Multidimensional Item Response Theory
 Authors@R: c( person("Phil", family="Chalmers", email =
     "rphilip.chalmers@gmail.com", role = c("aut", "cre", "cph")),
     person("Joshua", family="Pritikin", role=c('ctb')),
+    person("Alexander", family="Robitzsch", role=c('ctb')),
     person("Mateusz", family="Zoltak", role=c('ctb')))
 Description: Analysis of dichotomous and polytomous response data using
     unidimensional and multidimensional latent trait models under the Item
