@@ -43,6 +43,9 @@ NEW FEATURES
   and `optimizer = 'alabama'`, as well as the relevant package arguments
   through the `solnp_ags` and `alabama_ags` list inputs
 
+  - added `itemnames` argument added to `mirt.model()` to allow model
+  specifications using raw item names rather than location indicators
+
 BUG FIXES
 
   - fixed bug in `bfactor()` starting values when NAs were specified in the
